--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-chromadb==0.3.29
-langchain==0.1.9
-langchain_community==0.0.24
-langchain_core==0.1.26
-langchain_openai==0.0.7
-Requests==2.31.0
-streamlit==1.31.1
-toml==0.10.2
-pysqlite3-binary==0.5.2
-pypdf==4.0.2
+chromadb
+langchain
+langchain_community
+langchain_core
+langchain_openai
+PyPDF2
+Requests
+streamlit
+toml
