--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,2 @@
-GROQ_API_KEY = "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"
-COHERE_API_KEY = "qYXNlgoPFmf8yXPHCyzFQrfI354I1w52K8k7NwJC"
+GROQ_API_KEY = ""
+COHERE_API_KEY = ""
